--- a/talk.html
+++ b/talk.html
@@ -22,7 +22,13 @@
 <h1>Talks</h1>
 </div>
 <ul>
+<li><p>A Proximal Sampling Algorithm <a href="./talk/Proximal_Sampling.pdf">[slides]</a> <br />
+SIAM Conference on Mathematics of Data Science, San Diego, CA, September 2022</p>
+</li>
+</ul>
+<ul>
 <li><p>A Single Cut Proximal Bundle Method for Stochastic Convex Composite Optimization <a href="./talk/Stochastic_Bundle_ICCOPT.pdf">[slides]</a> <br />
+INFORMS Annual Meeting, Indianapolis, IN, October 2022 <br />
 International Conference on Continuous Optimization, Bethlehem, PA, July 2022</p>
 </li>
 </ul>
@@ -104,7 +110,7 @@ International Conference on Ocean, Offshore and Arctic Engineering, St. Johns, N
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-09-10 00:31:14 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-10-13 00:22:21 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
