--- a/talk.html
+++ b/talk.html
@@ -23,6 +23,7 @@
 </div>
 <ul>
 <li><p>A Proximal Sampling Algorithm <a href="./talk/Proximal_Sampling.pdf">[slides]</a> <br />
+Department of Management Science and Information Systems, Rutgers University, Virtual, November 2022 <br />
 SIAM Conference on Mathematics of Data Science, San Diego, CA, September 2022</p>
 </li>
 </ul>
@@ -110,7 +111,7 @@ International Conference on Ocean, Offshore and Arctic Engineering, St. Johns, N
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-10-16 00:25:47 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-11-04 11:04:17 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
