--- a/index.html
+++ b/index.html
@@ -118,18 +118,18 @@ Previously, he obtained Ph.D. in Operations Research at Georgia Tech, advised by
 </ul>
 <h2>Service</h2>
 <ul>
-<li><p>Reviewer for MAPR, SIOPT, JOGO, OPTL, IEEE TSP, IEEE L-CSS, OPT Workshop on Optimization for Machine Learning, AISTATS
+<li><p>Reviewer for MAPR, SIOPT, JMLR, JOGO, OPTL, IEEE TSP, IEEE L-CSS, OPT Workshop on Optimization for Machine Learning, AISTATS
 
 </p>
 </li>
-<li><p>Session Chair in SIAM OP21/OP23,  SIAM MDS22, INFORMS Annual Meeting 2022</p>
+<li><p>Session Chair in SIAM OP21/OP23,  SIAM MDS22, INFORMS Annual Meeting 2022, Winter Simulation Conference 2022</p>
 </li>
 <li><p>Organizer of Optimization Interest Group Meeting, Summer 2020, Mitsubishi Electric Research Laboratories (MERL)</p>
 </li>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-11-05 11:40:53 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-12-23 22:58:16 HST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
