--- a/talk.html
+++ b/talk.html
@@ -22,6 +22,11 @@
 <h1>Talks</h1>
 </div>
 <ul>
+<li><p>A Proximal Algorithm for Sampling from Nonsmooth Potentials <a href="./talk/Nonsmooth_Sampling.pdf">[slides]</a> <br />
+Winter Simulation Conference, Virtual, December 2022</p>
+</li>
+</ul>
+<ul>
 <li><p>A Proximal Sampling Algorithm <a href="./talk/Proximal_Sampling.pdf">[slides]</a> <br />
 Department of Management Science and Information Systems, Rutgers University, Virtual, November 2022 <br />
 SIAM Conference on Mathematics of Data Science, San Diego, CA, September 2022</p>
@@ -111,7 +116,7 @@ International Conference on Ocean, Offshore and Arctic Engineering, St. Johns, N
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-11-04 11:04:17 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-12-23 22:53:18 HST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
