--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@ Previously, he obtained Ph.D. in Operations Research at Georgia Tech, advised by
 </ul>
 <h2>News</h2>
 <ul>
-<li><p>A new paper <a href="https://arxiv.org/abs/2207.09024">&ldquo;A single cut proximal bundle method for stochastic convex composite optimization&rdquo;</a>.</p>
+<li><p>The paper <a href="https://ieeexplore.ieee.org/document/10015293">&ldquo;A Proximal Algorithm for Sampling from Non-smooth Potentials&rdquo;</a> has been published in 2022 Winter Simulation Conference (WSC).</p>
 </li>
-<li><p>The paper <a href="https://arxiv.org/abs/2110.04597">&ldquo;A Proximal Algorithm for Sampling from Non-smooth Potentials&rdquo;</a> has been accepted by Winter Simulation Conference 2022.</p>
+<li><p>A new paper <a href="https://arxiv.org/abs/2207.09024">&ldquo;A single cut proximal bundle method for stochastic convex composite optimization&rdquo;</a>.</p>
 </li>
 <li><p>A new paper <a href="https://arxiv.org/abs/2205.10188">&ldquo;A Proximal Algorithm for Sampling from Non-convex Potentials&rdquo;</a>.</p>
 </li>
@@ -129,7 +129,7 @@ Previously, he obtained Ph.D. in Operations Research at Georgia Tech, advised by
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-12-23 22:58:16 HST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-01-25 01:07:32 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
