--- a/publication.html
+++ b/publication.html
@@ -40,11 +40,6 @@
 <li><p>Jiaming Liang and Yongxin Chen, arXiv:2202.13975, 2022</p>
 </li></ul>
 </li>
-<li><p>A Proximal Algorithm for Sampling from Non-smooth Potentials <a href="https://arxiv.org/pdf/2110.04597.pdf">[pdf]</a> <br /></p>
-<ul>
-<li><p>Jiaming Liang and Yongxin Chen, arXiv:2110.04597, 2021</p>
-</li></ul>
-</li>
 <li><p>A unified analysis of a class of proximal bundle methods for solving hybrid convex composite optimization problems <a href="https://arxiv.org/pdf/2110.01084.pdf">[pdf]</a> <br /></p>
 <ul>
 <li><p>Jiaming Liang and Renato D.C. Monteiro, arXiv:2110.01084, 2021</p>
@@ -115,6 +110,13 @@
 <ul>
 <li><p>Conference Papers</p>
 <ul>
+<li><p>A Proximal Algorithm for Sampling from Non-smooth Potentials <a href="https://ieeexplore.ieee.org/document/10015293">[pdf]</a> <br /></p>
+<ul>
+<li><p>Jiaming Liang and Yongxin Chen</p>
+</li>
+<li><p><b>2022 Winter Simulation Conference (WSC)</b></p>
+</li></ul>
+</li>
 <li><p>Early Termination of Convex QP Solvers in Mixed-Integer Programming for Real-Time Decision Making <a href="https://ieeexplore.ieee.org/document/9482831">[pdf]</a> <br /></p>
 <ul>
 <li><p>Jiaming Liang, Stefano Di Cairano and Rien Quirynen</p>
@@ -155,7 +157,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-10-13 01:08:53 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-01-25 01:08:08 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
