--- a/teaching.html
+++ b/teaching.html
@@ -21,7 +21,12 @@
 <div id="toptitle">
 <h1>Teaching</h1>
 </div>
-<h2>Teaching assistant</h2>
+<h2>Recitation instructor @ Yale</h2>
+<ul>
+<li><p>CPSC 486/586: Probabilistic Machine Learning (Spring 2023)</p>
+</li>
+</ul>
+<h2>Teaching assistant @ Georgia Tech</h2>
 <ul>
 <li><p>ISYE 6644: Simulation (Summer 2021)</p>
 </li>
@@ -36,7 +41,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-09-10 00:20:42 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-03-13 13:13:35 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
