--- a/index.html
+++ b/index.html
@@ -65,71 +65,22 @@ Previously, he obtained Ph.D. in Operations Research at Georgia Tech, advised by
 </ul>
 <h2>News</h2>
 <ul>
+<li><p>A new paper <a href="https://arxiv.org/abs/2303.14896">&ldquo;Proximal bundle methods for hybrid weakly convex composite optimization problems&rdquo;</a>.</p>
+</li>
+<li><p>The paper <a href="https://arxiv.org/abs/2110.01084">&ldquo;A unified analysis of a class of proximal bundle methods for solving hybrid convex composite optimization problems&rdquo;</a> has been accepted by Mathematics of Operations Research.</p>
+</li>
 <li><p>The paper <a href="https://ieeexplore.ieee.org/document/10015293">&ldquo;A Proximal Algorithm for Sampling from Non-smooth Potentials&rdquo;</a> has been published in 2022 Winter Simulation Conference (WSC).</p>
 </li>
 <li><p>A new paper <a href="https://arxiv.org/abs/2207.09024">&ldquo;A single cut proximal bundle method for stochastic convex composite optimization&rdquo;</a>.</p>
 </li>
-<li><p>A new paper <a href="https://arxiv.org/abs/2205.10188">&ldquo;A Proximal Algorithm for Sampling from Non-convex Potentials&rdquo;</a>.</p>
-</li>
 <li><p>A new paper <a href="https://arxiv.org/abs/2202.13975">&ldquo;A Proximal Algorithm for Sampling&rdquo;</a>.</p>
 </li>
-<li><p>The paper <a href="https://epubs.siam.org/doi/abs/10.1137/20M1327513">&ldquo;A Proximal Bundle Variant with Optimal Iteration-Complexity for a Large Range of Prox Stepsizes&rdquo;</a> has been published in SIAM Journal on Optimization.
-</p>
-</li>
-<li><p>A new paper <a href="https://arxiv.org/abs/2110.01084">&ldquo;A unified analysis of a class of proximal bundle methods for solving hybrid convex composite optimization problems&rdquo;</a>.
-
-</p>
-</li>
-<li><p>A new paper <a href="https://arxiv.org/abs/2105.06436">&ldquo;Average Curvature FISTA for Nonconvex Smooth Composite Optimization Problems&rdquo;</a>.
-
-
-
-
-
-
-
-
-
-
-
-
-</p>
-</li>
-</ul>
-<h2>Awards</h2>
-<ul>
-<li><p><a href="https://www.isye.gatech.edu/student-awards">Alice and John Jarvis Ph.D. Student Paper Competition Honorable Mention</a>, Georgia Tech ISyE, 2021.</p>
-</li>
-<li><p>Simons Institute Travel Fund for attending the workshop <a href="https://simons.berkeley.edu/workshops/gmos2021-1">Sampling Algorithms and Geometries on Probability Distributions</a>.</p>
-</li>
-<li><p><a href="https://www.isye.gatech.edu/student-awards">Shabbir Ahmed Fellowship</a> for excellence in research (Optimization), Georgia Tech ISyE, 2021.
-
-
-</p>
-</li>
-<li><p><a href="http://ideas.gatech.edu/ideas-triad-research-scholarships-phd-students-and-postdocs">IDEaS-TRIAD Research Scholarship</a>, Georgia Tech, 2021.</p>
-</li>
-<li><p><a href="http://arc.gatech.edu/hg/item/630228">ARC-TRIAD Fellowship</a>, Georgia Tech, 2020.
-
-
-
-</p>
-</li>
-</ul>
-<h2>Service</h2>
-<ul>
-<li><p>Reviewer for MAPR, SIOPT, JMLR, JOGO, OPTL, IEEE TSP, IEEE L-CSS, OPT Workshop on Optimization for Machine Learning, AISTATS
-
-</p>
-</li>
-<li><p>Session Chair in SIAM OP21/OP23,  SIAM MDS22, INFORMS Annual Meeting 2022, Winter Simulation Conference 2022</p>
-</li>
-<li><p>Organizer of Optimization Interest Group Meeting, Summer 2020, Mitsubishi Electric Research Laboratories (MERL)</p>
+<li><p>A new paper <a href="https://arxiv.org/abs/2105.06436">&ldquo;Average Curvature FISTA for Nonconvex Smooth Composite Optimization Problems&rdquo;</a>.</p>
 </li>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-01-25 01:07:32 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-03-27 23:36:33 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
