--- a/publication.html
+++ b/publication.html
@@ -25,14 +25,17 @@
 <ul>
 <li><p>Preprints</p>
 <ul>
-<li><p>A single cut proximal bundle method for stochastic convex composite optimization <a href="https://arxiv.org/pdf/2207.09024.pdf">[pdf]</a> <br /></p>
+<li><p>Proximal bundle methods for hybrid weakly convex composite optimization problems
+<a href="https://arxiv.org/pdf/2303.14896.pdf">[pdf]</a> <br /></p>
 <ul>
-<li><p>Jiaming Liang, Vincent Guigues and Renato D.C. Monteiro, arXiv:2207.09024, 2022</p>
+<li><p>Jiaming Liang, Renato D.C. Monteiro and Honghao Zhang, arXiv:2303.14896, 2023</p>
 </li></ul>
 </li>
-<li><p>A Proximal Algorithm for Sampling from Non-convex Potentials <a href="https://arxiv.org/pdf/2205.10188.pdf">[pdf]</a> <br /></p>
+<li><p>A single cut proximal bundle method for stochastic convex composite optimization <a href="https://arxiv.org/pdf/2207.09024.pdf">[pdf]</a> <br /></p>
 <ul>
-<li><p>Jiaming Liang and Yongxin Chen, arXiv:2205.10188, 2022</p>
+<li><p>Jiaming Liang, Vincent Guigues and Renato D.C. Monteiro, arXiv:2207.09024, 2022
+
+</p>
 </li></ul>
 </li>
 <li><p>A Proximal Algorithm for Sampling <a href="https://arxiv.org/pdf/2202.13975.pdf">[pdf]</a> <br /></p>
@@ -157,7 +160,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-01-25 01:08:08 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-03-27 23:41:13 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
