--- a/talk.html
+++ b/talk.html
@@ -22,6 +22,11 @@
 <h1>Talks</h1>
 </div>
 <ul>
+<li><p>A Universal Proximal Framework for Optimization and Sampling <a href="./talk/Universal_Proximal_Framework.pdf">[slides]</a> <br />
+Goergen Institute for Data Science, University of Rochester, Rochester, NY, February 2023</p>
+</li>
+</ul>
+<ul>
 <li><p>A Proximal Algorithm for Sampling from Nonsmooth Potentials <a href="./talk/Nonsmooth_Sampling.pdf">[slides]</a> <br />
 Winter Simulation Conference, Virtual, December 2022</p>
 </li>
@@ -116,7 +121,7 @@ International Conference on Ocean, Offshore and Arctic Engineering, St. Johns, N
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-12-23 22:53:18 HST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-03-27 21:16:17 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
