--- a/index.html
+++ b/index.html
@@ -65,6 +65,8 @@ Previously, he obtained Ph.D. in Operations Research at Georgia Tech, advised by
 </ul>
 <h2>News</h2>
 <ul>
+<li><p>The paper <a href="https://arxiv.org/abs/2105.06436">&ldquo;Average Curvature FISTA for Nonconvex Smooth Composite Optimization Problems&rdquo;</a> has been accepted by Computational Optimization and Applications.</p>
+</li>
 <li><p>A new paper <a href="https://arxiv.org/abs/2303.14896">&ldquo;Proximal bundle methods for hybrid weakly convex composite optimization problems&rdquo;</a>.</p>
 </li>
 <li><p>The paper <a href="https://arxiv.org/abs/2110.01084">&ldquo;A unified analysis of a class of proximal bundle methods for solving hybrid convex composite optimization problems&rdquo;</a> has been accepted by Mathematics of Operations Research.</p>
@@ -75,12 +77,10 @@ Previously, he obtained Ph.D. in Operations Research at Georgia Tech, advised by
 </li>
 <li><p>A new paper <a href="https://arxiv.org/abs/2202.13975">&ldquo;A Proximal Algorithm for Sampling&rdquo;</a>.</p>
 </li>
-<li><p>A new paper <a href="https://arxiv.org/abs/2105.06436">&ldquo;Average Curvature FISTA for Nonconvex Smooth Composite Optimization Problems&rdquo;</a>.</p>
-</li>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-03-27 23:36:33 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-04-17 01:24:13 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
