--- a/index.html
+++ b/index.html
@@ -65,7 +65,9 @@ Previously, he obtained Ph.D. in Operations Research at Georgia Tech, advised by
 </ul>
 <h2>News</h2>
 <ul>
-<li><p>The paper <a href="https://arxiv.org/abs/2105.06436">&ldquo;Average Curvature FISTA for Nonconvex Smooth Composite Optimization Problems&rdquo;</a> has been accepted by Computational Optimization and Applications.</p>
+<li><p>The paper &ldquo;On a Class of Gibbs Sampling over Networks&rdquo; has been accepted by Conference on Learning Theory (COLT) 2023.</p>
+</li>
+<li><p>The paper <a href="https://link.springer.com/article/10.1007/s10589-023-00490-3">&ldquo;Average Curvature FISTA for Nonconvex Smooth Composite Optimization Problems&rdquo;</a> has been published in Computational Optimization and Applications.</p>
 </li>
 <li><p>A new paper <a href="https://arxiv.org/abs/2303.14896">&ldquo;Proximal bundle methods for hybrid weakly convex composite optimization problems&rdquo;</a>.</p>
 </li>
@@ -80,7 +82,7 @@ Previously, he obtained Ph.D. in Operations Research at Georgia Tech, advised by
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-04-17 01:24:13 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-05-15 17:03:05 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
