--- a/publication.html
+++ b/publication.html
@@ -43,16 +43,6 @@
 <li><p>Jiaming Liang and Yongxin Chen, arXiv:2202.13975, 2022</p>
 </li></ul>
 </li>
-<li><p>A unified analysis of a class of proximal bundle methods for solving hybrid convex composite optimization problems <a href="https://arxiv.org/pdf/2110.01084.pdf">[pdf]</a> <br /></p>
-<ul>
-<li><p>Jiaming Liang and Renato D.C. Monteiro, arXiv:2110.01084, 2021</p>
-</li></ul>
-</li>
-<li><p>Average Curvature FISTA for Nonconvex Smooth Composite Optimization Problems <a href="https://arxiv.org/pdf/2105.06436.pdf">[pdf]</a> <br /></p>
-<ul>
-<li><p>Jiaming Liang and Renato D.C. Monteiro, arXiv:2105.06436, 2021</p>
-</li></ul>
-</li>
 <li><p>A Doubly Accelerated Inexact Proximal Point Method for Nonconvex Composite Optimization Problems <a href="https://arxiv.org/pdf/1811.11378.pdf">[pdf]</a> <br /></p>
 <ul>
 <li><p>Jiaming Liang and Renato D.C. Monteiro, arXiv:1811.11378, 2018</p>
@@ -67,6 +57,20 @@
 <ul>
 <li><p>Journal Papers</p>
 <ul>
+<li><p>A unified analysis of a class of proximal bundle methods for solving hybrid convex composite optimization problems <a href="https://arxiv.org/pdf/2110.01084.pdf">[pdf]</a> <br /></p>
+<ul>
+<li><p>Jiaming Liang and Renato D.C. Monteiro</p>
+</li>
+<li><p><b>Mathematics of Operations Research</b>, 2023</p>
+</li></ul>
+</li>
+<li><p>Average Curvature FISTA for Nonconvex Smooth Composite Optimization Problems <a href="https://link.springer.com/article/10.1007/s10589-023-00490-3">[pdf]</a> <br /></p>
+<ul>
+<li><p>Jiaming Liang and Renato D.C. Monteiro</p>
+</li>
+<li><p><b>Computational Optimization and Applications</b>, 2023</p>
+</li></ul>
+</li>
 <li><p>A Proximal Bundle Variant with Optimal Iteration-Complexity for a Large Range of Prox Stepsizes <a href="https://epubs.siam.org/doi/10.1137/20M1327513">[pdf]</a> <br /></p>
 <ul>
 <li><p>Jiaming Liang and Renato D.C. Monteiro</p>
@@ -113,6 +117,13 @@
 <ul>
 <li><p>Conference Papers</p>
 <ul>
+<li><p>On a Class of Gibbs Sampling over Networks <br /></p>
+<ul>
+<li><p>Bo Yuan, Jiaojiao Fan, Jiaming Liang, Andre Wibisono, and Yongxin Chen</p>
+</li>
+<li><p><b>2023 Conference on Learning Theory (COLT) </b></p>
+</li></ul>
+</li>
 <li><p>A Proximal Algorithm for Sampling from Non-smooth Potentials <a href="https://ieeexplore.ieee.org/document/10015293">[pdf]</a> <br /></p>
 <ul>
 <li><p>Jiaming Liang and Yongxin Chen</p>
@@ -160,7 +171,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-03-27 23:41:13 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-05-15 17:09:03 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
