--- a/index.html
+++ b/index.html
@@ -58,20 +58,20 @@ Previously, he obtained Ph.D. in Operations Research at Georgia Tech, advised by
 </li>
 <li><p>Stochastic Optimization</p>
 </li>
-<li><p>High-dimensional Sampling Algorithms</p>
+<li><p>Sampling Algorithms</p>
 </li>
 <li><p>Foundation of Data Science</p>
 </li>
 </ul>
 <h2>News</h2>
 <ul>
+<li><p>The paper <a href="https://pubsonline.informs.org/doi/abs/10.1287/moor.2023.1372">&ldquo;A unified analysis of a class of proximal bundle methods for solving hybrid convex composite optimization problems&rdquo;</a> has been published in Mathematics of Operations Research.</p>
+</li>
 <li><p>The paper &ldquo;On a Class of Gibbs Sampling over Networks&rdquo; has been accepted by Conference on Learning Theory (COLT) 2023.</p>
 </li>
 <li><p>The paper <a href="https://link.springer.com/article/10.1007/s10589-023-00490-3">&ldquo;Average Curvature FISTA for Nonconvex Smooth Composite Optimization Problems&rdquo;</a> has been published in Computational Optimization and Applications.</p>
 </li>
 <li><p>A new paper <a href="https://arxiv.org/abs/2303.14896">&ldquo;Proximal bundle methods for hybrid weakly convex composite optimization problems&rdquo;</a>.</p>
-</li>
-<li><p>The paper <a href="https://arxiv.org/abs/2110.01084">&ldquo;A unified analysis of a class of proximal bundle methods for solving hybrid convex composite optimization problems&rdquo;</a> has been accepted by Mathematics of Operations Research.</p>
 </li>
 <li><p>The paper <a href="https://ieeexplore.ieee.org/document/10015293">&ldquo;A Proximal Algorithm for Sampling from Non-smooth Potentials&rdquo;</a> has been published in 2022 Winter Simulation Conference (WSC).</p>
 </li>
@@ -82,7 +82,7 @@ Previously, he obtained Ph.D. in Operations Research at Georgia Tech, advised by
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-05-15 17:03:05 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-06-23 13:29:49 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
