--- a/publication.html
+++ b/publication.html
@@ -57,7 +57,7 @@
 <ul>
 <li><p>Journal Papers</p>
 <ul>
-<li><p>A unified analysis of a class of proximal bundle methods for solving hybrid convex composite optimization problems <a href="https://arxiv.org/pdf/2110.01084.pdf">[pdf]</a> <br /></p>
+<li><p>A unified analysis of a class of proximal bundle methods for solving hybrid convex composite optimization problems <a href="https://pubsonline.informs.org/doi/abs/10.1287/moor.2023.1372">[pdf]</a> <br /></p>
 <ul>
 <li><p>Jiaming Liang and Renato D.C. Monteiro</p>
 </li>
@@ -171,7 +171,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-05-15 17:09:03 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-06-23 13:29:54 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
