--- a/talk.html
+++ b/talk.html
@@ -22,6 +22,11 @@
 <h1>Talks</h1>
 </div>
 <ul>
+<li><p>Variance Reduction and Low Sample Complexity in Stochastic Optimization via Proximal Point Methods <br />
+SIAM Conference on Optimization, Seattle, WA, May-June 2023</p>
+</li>
+</ul>
+<ul>
 <li><p>A Universal Proximal Framework for Optimization and Sampling <a href="./talk/Universal_Proximal_Framework.pdf">[slides]</a> <br />
 Goergen Institute for Data Science, University of Rochester, Rochester, NY, February 2023</p>
 </li>
@@ -121,7 +126,7 @@ International Conference on Ocean, Offshore and Arctic Engineering, St. Johns, N
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-03-27 21:16:17 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-06-23 13:35:12 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
