--- a/index.html
+++ b/index.html
@@ -25,13 +25,14 @@
 <img src="JiamingLiang_Web.jpg" alt="alt text" width="244.8px" height="326.4px" />&nbsp;</td>
 <td align="left"><p>Jiaming Liang  <a href="https://scholar.google.com/citations?user=fUBCj-0AAAAJ&amp;hl=en">[Google Scholar]</a> <br /> 
 
-Postdoctoral Associate <br />
+
+Assistant Professor <br />
 
 
 
-Department of Computer Science <br />
+Goergen Institute for Data Science &amp; Department of Computer Science<br />
+University of Rochester <br />
 
-Yale University <br />
 
 
 </p>
@@ -43,9 +44,9 @@ Yale University <br />
 </p>
 </td></tr></table>
 <h2>Short Bio </h2>
-<p>Jiaming is a postdoctoral researcher at Yale CS department, under the supervision of <a href="http://www.cs.yale.edu/homes/wibisono/">Andre Wibisono</a>.
+<p>Jiaming is an assistant professor in Data Science and Computer Science at the University of Rochester. He was a postdoctoral researcher at Yale CS department, under the supervision of <a href="http://www.cs.yale.edu/homes/wibisono/">Andre Wibisono</a>.
 
-Previously, he obtained Ph.D. in Operations Research at Georgia Tech, advised by <a href="https://www2.isye.gatech.edu/~monteiro/">Renato Monteiro</a>. 
+He obtained Ph.D. in Operations Research at Georgia Tech, advised by <a href="https://www2.isye.gatech.edu/~monteiro/">Renato Monteiro</a>. 
 
 
 </p>
@@ -63,26 +64,24 @@ Previously, he obtained Ph.D. in Operations Research at Georgia Tech, advised by
 <li><p>Foundation of Data Science</p>
 </li>
 </ul>
-<h2>News</h2>
+<h2></h2>
 <ul>
+<li><p>The paper <a href="https://arxiv.org/abs/2202.13975">&ldquo;A Proximal Algorithm for Sampling&rdquo;</a> has been accepted by Transactions on Machine Learning Research.</p>
+</li>
 <li><p>The paper <a href="https://pubsonline.informs.org/doi/abs/10.1287/moor.2023.1372">&ldquo;A unified analysis of a class of proximal bundle methods for solving hybrid convex composite optimization problems&rdquo;</a> has been published in Mathematics of Operations Research.</p>
 </li>
-<li><p>The paper &ldquo;On a Class of Gibbs Sampling over Networks&rdquo; has been accepted by Conference on Learning Theory (COLT) 2023.</p>
+<li><p>The paper <a href="https://arxiv.org/abs/2306.13801">&ldquo;On a Class of Gibbs Sampling over Networks&rdquo;</a> has been accepted by Conference on Learning Theory (COLT) 2023.</p>
 </li>
 <li><p>The paper <a href="https://link.springer.com/article/10.1007/s10589-023-00490-3">&ldquo;Average Curvature FISTA for Nonconvex Smooth Composite Optimization Problems&rdquo;</a> has been published in Computational Optimization and Applications.</p>
 </li>
 <li><p>A new paper <a href="https://arxiv.org/abs/2303.14896">&ldquo;Proximal bundle methods for hybrid weakly convex composite optimization problems&rdquo;</a>.</p>
 </li>
-<li><p>The paper <a href="https://ieeexplore.ieee.org/document/10015293">&ldquo;A Proximal Algorithm for Sampling from Non-smooth Potentials&rdquo;</a> has been published in 2022 Winter Simulation Conference (WSC).</p>
-</li>
 <li><p>A new paper <a href="https://arxiv.org/abs/2207.09024">&ldquo;A single cut proximal bundle method for stochastic convex composite optimization&rdquo;</a>.</p>
-</li>
-<li><p>A new paper <a href="https://arxiv.org/abs/2202.13975">&ldquo;A Proximal Algorithm for Sampling&rdquo;</a>.</p>
 </li>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-06-23 13:29:49 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-07-01 23:51:26 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
