--- a/publication.html
+++ b/publication.html
@@ -38,11 +38,6 @@
 </p>
 </li></ul>
 </li>
-<li><p>A Proximal Algorithm for Sampling <a href="https://arxiv.org/pdf/2202.13975.pdf">[pdf]</a> <br /></p>
-<ul>
-<li><p>Jiaming Liang and Yongxin Chen, arXiv:2202.13975, 2022</p>
-</li></ul>
-</li>
 <li><p>A Doubly Accelerated Inexact Proximal Point Method for Nonconvex Composite Optimization Problems <a href="https://arxiv.org/pdf/1811.11378.pdf">[pdf]</a> <br /></p>
 <ul>
 <li><p>Jiaming Liang and Renato D.C. Monteiro, arXiv:1811.11378, 2018</p>
@@ -57,6 +52,13 @@
 <ul>
 <li><p>Journal Papers</p>
 <ul>
+<li><p>A Proximal Algorithm for Sampling <a href="https://arxiv.org/pdf/2202.13975.pdf">[pdf]</a> <br /></p>
+<ul>
+<li><p>Jiaming Liang and Yongxin Chen</p>
+</li>
+<li><p><b>Transactions on Machine Learning Research</b>, 2023</p>
+</li></ul>
+</li>
 <li><p>A unified analysis of a class of proximal bundle methods for solving hybrid convex composite optimization problems <a href="https://pubsonline.informs.org/doi/abs/10.1287/moor.2023.1372">[pdf]</a> <br /></p>
 <ul>
 <li><p>Jiaming Liang and Renato D.C. Monteiro</p>
@@ -117,11 +119,11 @@
 <ul>
 <li><p>Conference Papers</p>
 <ul>
-<li><p>On a Class of Gibbs Sampling over Networks <br /></p>
+<li><p>On a Class of Gibbs Sampling over Networks <a href="https://arxiv.org/pdf/2306.13801.pdf">[pdf]</a> <br /></p>
 <ul>
 <li><p>Bo Yuan, Jiaojiao Fan, Jiaming Liang, Andre Wibisono, and Yongxin Chen</p>
 </li>
-<li><p><b>2023 Conference on Learning Theory (COLT) </b></p>
+<li><p><b>2023 Conference on Learning Theory (COLT)</b></p>
 </li></ul>
 </li>
 <li><p>A Proximal Algorithm for Sampling from Non-smooth Potentials <a href="https://ieeexplore.ieee.org/document/10015293">[pdf]</a> <br /></p>
@@ -171,7 +173,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-06-23 13:29:54 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-07-01 23:43:46 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
