--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ He obtained Ph.D. in Operations Research at Georgia Tech, advised by <a href="ht
 <li><p>Foundation of Data Science</p>
 </li>
 </ul>
-<h2></h2>
+<h2>News </h2>
 <ul>
 <li><p>The paper <a href="https://arxiv.org/abs/2202.13975">&ldquo;A Proximal Algorithm for Sampling&rdquo;</a> has been accepted by Transactions on Machine Learning Research.</p>
 </li>
@@ -81,7 +81,7 @@ He obtained Ph.D. in Operations Research at Georgia Tech, advised by <a href="ht
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-07-01 23:51:26 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-07-03 00:47:31 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
