--- a/publication.html
+++ b/publication.html
@@ -22,8 +22,7 @@
 <h1>Publications </h1>
 <div id="subtitle"></div>
 </div>
-<ul>
-<li><p>Preprints</p>
+<h2>Preprints</h2>
 <ul>
 <li><p>Proximal bundle methods for hybrid weakly convex composite optimization problems
 <a href="https://arxiv.org/pdf/2303.14896.pdf">[pdf]</a> <br /></p>
@@ -46,11 +45,7 @@
 
 </li>
 </ul>
-
-</li>
-</ul>
-<ul>
-<li><p>Journal Papers</p>
+<h2>Journal Papers</h2>
 <ul>
 <li><p>A Proximal Algorithm for Sampling <a href="https://arxiv.org/pdf/2202.13975.pdf">[pdf]</a> <br /></p>
 <ul>
@@ -113,11 +108,7 @@
 
 </li>
 </ul>
-
-</li>
-</ul>
-<ul>
-<li><p>Conference Papers</p>
+<h2>Conference Papers</h2>
 <ul>
 <li><p>On a Class of Gibbs Sampling over Networks <a href="https://arxiv.org/pdf/2306.13801.pdf">[pdf]</a> <br /></p>
 <ul>
@@ -157,23 +148,15 @@
 
 </li>
 </ul>
-
-</li>
-</ul>
-<ul>
-<li><p>Patents
-</p>
+<h2>Patents</h2>
 <ul>
 <li><p>Rien Quirynen, Jiaming Liang, and Stefano Di Cairano. Controller with Early Termination in Mixed-Integer Optimal Control Optimization. US Patent App. 17089763. 05/05/2022.
 <a href="https://patents.google.com/patent/US20220137961A1/en">[link]</a> <br /></p>
 </li>
 </ul>
-
-</li>
-</ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-07-01 23:43:46 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-07-03 00:51:05 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
