--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ He obtained Ph.D. in Operations Research at Georgia Tech, advised by <a href="ht
 </ul>
 <h2>News </h2>
 <ul>
-<li><p>The paper <a href="https://arxiv.org/abs/2202.13975">&ldquo;A Proximal Algorithm for Sampling&rdquo;</a> has been accepted by Transactions on Machine Learning Research.</p>
+<li><p>The paper <a href="https://openreview.net/forum?id=CkXOwlhf27">&ldquo;A Proximal Algorithm for Sampling&rdquo;</a> has been published in Transactions on Machine Learning Research.</p>
 </li>
 <li><p>The paper <a href="https://pubsonline.informs.org/doi/abs/10.1287/moor.2023.1372">&ldquo;A unified analysis of a class of proximal bundle methods for solving hybrid convex composite optimization problems&rdquo;</a> has been published in Mathematics of Operations Research.</p>
 </li>
@@ -81,7 +81,7 @@ He obtained Ph.D. in Operations Research at Georgia Tech, advised by <a href="ht
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-07-03 00:47:31 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-07-07 12:20:15 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
