--- a/publication.html
+++ b/publication.html
@@ -47,7 +47,7 @@
 </ul>
 <h2>Journal Papers</h2>
 <ul>
-<li><p>A Proximal Algorithm for Sampling <a href="https://arxiv.org/pdf/2202.13975.pdf">[pdf]</a> <br /></p>
+<li><p>A Proximal Algorithm for Sampling <a href="https://openreview.net/pdf?id=CkXOwlhf27">[pdf]</a> <br /></p>
 <ul>
 <li><p>Jiaming Liang and Yongxin Chen</p>
 </li>
@@ -156,7 +156,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-07-03 00:51:05 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-07-07 12:20:39 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
