--- a/index.html
+++ b/index.html
@@ -36,12 +36,14 @@ University of Rochester <br />
 
 
 </p>
-<p>Email: firstname DOT lastname AT yale DOT edu <br />
+<p>Office: Wegmans Hall 2403, 250 Hutchison Rd, Rochester, NY 14620 <br />
+Email: firstname DOT lastname AT rochester DOT edu <br />
 
 
 
 
 </p>
+<p><b>Prospective students:</b> I am looking for graduate students who are interested in optimization, sampling, and other topics in data science, machine learning, and operations research. Feel free to contact me about any interest we may share.</p>
 </td></tr></table>
 <h2>Short Bio </h2>
 <p>Jiaming is an assistant professor in Data Science and Computer Science at the University of Rochester. He was a postdoctoral researcher at Yale CS department, under the supervision of <a href="http://www.cs.yale.edu/homes/wibisono/">Andre Wibisono</a>.
@@ -66,11 +68,11 @@ He obtained Ph.D. in Operations Research at Georgia Tech, advised by <a href="ht
 </ul>
 <h2>News </h2>
 <ul>
+<li><p>The paper <a href="https://proceedings.mlr.press/v195/yuan23a.html">&ldquo;On a Class of Gibbs Sampling over Networks&rdquo;</a> has been published in Conference on Learning Theory (COLT) 2023.</p>
+</li>
 <li><p>The paper <a href="https://openreview.net/forum?id=CkXOwlhf27">&ldquo;A Proximal Algorithm for Sampling&rdquo;</a> has been published in Transactions on Machine Learning Research.</p>
 </li>
 <li><p>The paper <a href="https://pubsonline.informs.org/doi/abs/10.1287/moor.2023.1372">&ldquo;A unified analysis of a class of proximal bundle methods for solving hybrid convex composite optimization problems&rdquo;</a> has been published in Mathematics of Operations Research.</p>
-</li>
-<li><p>The paper <a href="https://arxiv.org/abs/2306.13801">&ldquo;On a Class of Gibbs Sampling over Networks&rdquo;</a> has been accepted by Conference on Learning Theory (COLT) 2023.</p>
 </li>
 <li><p>The paper <a href="https://link.springer.com/article/10.1007/s10589-023-00490-3">&ldquo;Average Curvature FISTA for Nonconvex Smooth Composite Optimization Problems&rdquo;</a> has been published in Computational Optimization and Applications.</p>
 </li>
@@ -81,7 +83,7 @@ He obtained Ph.D. in Operations Research at Georgia Tech, advised by <a href="ht
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-07-07 12:20:15 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-08-31 07:15:51 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
