--- a/publication.html
+++ b/publication.html
@@ -110,7 +110,7 @@
 </ul>
 <h2>Conference Papers</h2>
 <ul>
-<li><p>On a Class of Gibbs Sampling over Networks <a href="https://arxiv.org/pdf/2306.13801.pdf">[pdf]</a> <br /></p>
+<li><p>On a Class of Gibbs Sampling over Networks <a href="https://proceedings.mlr.press/v195/yuan23a/yuan23a.pdf">[pdf]</a> <br /></p>
 <ul>
 <li><p>Bo Yuan, Jiaojiao Fan, Jiaming Liang, Andre Wibisono, and Yongxin Chen</p>
 </li>
@@ -156,7 +156,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-07-07 12:20:39 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-08-31 05:58:32 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
