--- a/teaching.html
+++ b/teaching.html
@@ -21,6 +21,11 @@
 <div id="toptitle">
 <h1>Teaching</h1>
 </div>
+<h2>Instructor @ U of R</h2>
+<ul>
+<li><p><a href="https://jiaming-liang.github.io/OPTML.html">DSCC 435 / CSC 435 / ECE 412 Optimization for Machine Learning</a> (Fall 2023)</p>
+</li>
+</ul>
 <h2>Recitation instructor @ Yale</h2>
 <ul>
 <li><p>CPSC 486/586: Probabilistic Machine Learning (Spring 2023)</p>
@@ -32,7 +37,7 @@
 </li>
 <li><p>ISYE 6669: Deterministic Optimization (Fall 2019/Fall 2021)</p>
 </li>
-<li><p><a href="https://courses.edx.org/courses/course-v1:GTx+ISYE8803+2T2019/course/">ISYE 8803 Topics on High-Dimensional Data Analytics (Summer 2019/Fall 2020)</a></p>
+<li><p>ISYE 8803 Topics on High-Dimensional Data Analytics (Summer 2019/Fall 2020)</p>
 </li>
 <li><p>CX/MATH 4640 Numerical Analysis I (Fall 2016)</p>
 </li>
@@ -41,7 +46,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-03-13 13:13:35 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-08-31 06:51:59 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
