--- a/OPTML.html
+++ b/OPTML.html
@@ -24,19 +24,30 @@
 <p>This course primarily focuses on algorithms for large-scale optimization problems arising in machine learning and data science applications. The first part will cover first-order methods including gradient and subgradient methods, mirror descent, proximal gradient method, accelerated gradient method, Frank-Wolfe method, and inexact proximal point methods. The second part will introduce algorithms for nonconvex optimization, stochastic optimization, distributed optimization, manifold optimization, reinforcement learning, and those beyond first-order.</p>
 <h2>Course Information</h2>
 <ul>
+<li><p><a href="./teaching/OPTML/syllabus.pdf">Syllabus</a></p>
+</li>
+</ul>
+<ul>
 <li><p>Instructor: <a href="https://jiaming-liang.github.io/">Jiaming Liang</a></p>
 </li>
 </ul>
 <ul>
-<li><p>Teaching assistant: Lin Zang</p>
+<li><p>Teaching Assistant: Lin Zang</p>
 </li>
 </ul>
 <ul>
-<li><p>Meeting information: 9:40-10:55 am, Tuesday/Thursday, Hylan Building 203</p>
+<li><p>Meeting Information: 9:40-10:55 am, Tuesday/Thursday, Hylan Building 203</p>
 </li>
 </ul>
 <ul>
-<li><p>Office hours: 4:00-5:oo pm, Wednesday, Wegmans Hall 2403 (Jiaming Liang), 4:00-5:oo pm, Friday Wegmans Hall 1219 (Lin Zang)</p>
+<li><p>Office Hours</p>
+<ul>
+<li><p>4:00-5:oo pm, Wednesday, Wegmans Hall 2403 (Jiaming Liang)</p>
+</li>
+<li><p>4:00-5:oo pm, Friday, Wegmans Hall 1219 (Lin Zang)</p>
+</li>
+</ul>
+
 </li>
 </ul>
 <ul>
@@ -51,7 +62,16 @@
 </li>
 </ul>
 <ul>
-<li><p>Syllabus <a href="./teaching/OPTML/syllabus.pdf">[pdf]</a><br /></p>
+<li><p>Recommended Readings</p>
+<ul>
+<li><p>Guanghui Lan. <i>First-order and Stochastic Optimization Methods for Machine Learning</i>. Springer, 2020.</p>
+</li>
+<li><p>Benjamin Recht and Stephen Wright. <i>Optimization for Data Analysis</i>. Cambridge University Press, 2022.</p>
+</li>
+<li><p>Suvrit Sra, Sebastian Nowozin, and Stephen Wright, eds. <i>Optimization for Machine Learning</i>. MIT Press, 2011.</p>
+</li>
+</ul>
+
 </li>
 </ul>
 <h2>Topics</h2>
@@ -132,7 +152,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-08-31 06:47:25 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-08-31 07:33:17 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
