--- a/OPTML.html
+++ b/OPTML.html
@@ -80,7 +80,7 @@
 <ul>
 <li><p>Applications in ML <a href="./teaching/OPTML/leture_1_introduction.pptx">[slides]</a><br /></p>
 </li>
-<li><p>Convex analysis and complexity analysis</p>
+<li><p>Convexity and complexity <a href="./teaching/OPTML/Lec2_Convexity_and_Complexity.pdf">[notes]</a><br /></p>
 </li>
 </ul>
 
@@ -152,7 +152,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-08-31 08:36:53 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-09-07 17:52:14 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
