--- a/OPTML.html
+++ b/OPTML.html
@@ -89,7 +89,7 @@
 <ul>
 <li><p>First-order methods I: basic concepts</p>
 <ul>
-<li><p>Gradient method</p>
+<li><p>Gradient method <a href="./teaching/OPTML/Lec3_Gradient_Method.pdf">[notes]</a><br /></p>
 </li>
 <li><p>Subgradient method</p>
 </li>
@@ -152,7 +152,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-09-07 17:52:14 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-09-13 17:43:11 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
