--- a/OPTML.html
+++ b/OPTML.html
@@ -91,7 +91,7 @@
 <ul>
 <li><p>Gradient method <a href="./teaching/OPTML/Lec3_Gradient_Method.pdf">[notes]</a><br /></p>
 </li>
-<li><p>Subgradient method</p>
+<li><p>Subgradient method <a href="./teaching/OPTML/Lec4_Subgradient_Method.pdf">[notes]</a><br /></p>
 </li>
 <li><p>Mirror descent</p>
 </li>
@@ -152,7 +152,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-09-13 17:43:11 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-09-19 16:03:02 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
