--- a/OPTML.html
+++ b/OPTML.html
@@ -93,11 +93,11 @@
 </li>
 <li><p>Subgradient method <a href="./teaching/OPTML/Lec4_Subgradient_Method.pdf">[notes]</a><br /></p>
 </li>
-<li><p>Mirror descent</p>
+<li><p>Mirror descent <a href="./teaching/OPTML/Lec5_Mirror_Descent.pdf">[notes]</a><br /></p>
 </li>
-<li><p>Proximal gradient method</p>
+<li><p>Proximal gradient method <a href="./teaching/OPTML/Lec6_Proximal_Gradient.pdf">[notes]</a><br /></p>
 </li>
-<li><p>Accelerated gradient method</p>
+<li><p>Accelerated gradient method <a href="./teaching/OPTML/Lec7_Accelerated_Gradient.pdf">[notes]</a><br /></p>
 </li>
 <li><p>Frank-Wolfe method</p>
 </li>
@@ -152,7 +152,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-09-19 16:03:02 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-10-05 11:48:26 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
