--- a/talk.html
+++ b/talk.html
@@ -23,11 +23,13 @@
 </div>
 <ul>
 <li><p>Variance Reduction and Low Sample Complexity in Stochastic Optimization via Proximal Point Methods <br />
+International Conference on Stochastic Programming, Davis, CA, July 2023 <br />
 SIAM Conference on Optimization, Seattle, WA, May-June 2023</p>
 </li>
 </ul>
 <ul>
-<li><p>A Universal Proximal Framework for Optimization and Sampling <a href="./talk/Universal_Proximal_Framework.pdf">[slides]</a> <br />
+<li><p>A Universal Proximal Framework for Optimization and Sampling <a href="./talk/CS_talk_final.pdf">[slides]</a> <br />
+Department of Computer Science, University of Rochester, Rochester, NY, September 2023 <br />
 Goergen Institute for Data Science, University of Rochester, Rochester, NY, February 2023</p>
 </li>
 </ul>
@@ -126,7 +128,7 @@ International Conference on Ocean, Offshore and Arctic Engineering, St. Johns, N
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-08-31 08:36:08 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-10-05 11:45:03 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
