--- a/CONTALG.html
+++ b/CONTALG.html
@@ -6,7 +6,7 @@
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <link rel="stylesheet" href="jemdoc.css" type="text/css" />
 <link rel="shortcut icon" type="image/x-icon" href="R.ico" />
-<title>Continuous ALgorithms for Optimization and Sampling, Spring 2024</title>
+<title>Continuous Algorithms for Optimization and Sampling, Spring 2024</title>
 </head>
 <body>
 <table summary="Table for page layout." id="tlayout">
@@ -19,7 +19,7 @@
 </td>
 <td id="layout-content">
 <div id="toptitle">
-<h1>Continuous ALgorithms for Optimization and Sampling, Spring 2024</h1>
+<h1>Continuous Algorithms for Optimization and Sampling, Spring 2024</h1>
 </div>
 <p>Traditional algorithms in computer science are designed in a discrete manner. Nonetheless, recent years have witnessed great advances from a continuous perspective, particularly in the design of optimization and sampling algorithms. There is a deep connection between optimization and sampling, either through optimization as the limit of sampling, or through sampling as optimization in the space of probability measures. Motivated by this viewpoint, this course aims to develop a systematic way to design and analyze algorithms for both areas from the continuous perspective. More particularly, this course starts from continuous optimization, discusses stochastic optimization in detail, introduces optimal transport as a bridge connecting optimization and sampling, and finally delves into sampling.</p>
 <h2>Course Information</h2>
@@ -70,7 +70,7 @@ Programming: Modeling and Theory</i>. SIAM, 2021.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-10-06 15:14:16 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-10-06 15:21:36 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
