--- a/OPTML.html
+++ b/OPTML.html
@@ -108,15 +108,15 @@
 <ul>
 <li><p>First-order methods II: advanced topics</p>
 <ul>
-<li><p>Inexact proximal point methods</p>
+<li><p>Inexact proximal point methods <a href="./teaching/OPTML/Lec9_Inexact_Proximal_Point.pdf">[notes]</a><br /></p>
 </li>
-<li><p>Operator splitting</p>
+<li><p>Augmented Lagrangian</p>
 </li>
-<li><p>Randomized coordinate descent</p>
+<li><p>Smoothing techniques</p>
 </li>
 <li><p>Optimization in relative scale</p>
 </li>
-<li><p>Smoothing techniques</p>
+<li><p>Randomized coordinate descent</p>
 </li>
 </ul>
 
@@ -152,7 +152,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-10-06 14:58:32 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-10-26 13:36:52 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
