--- a/talk.html
+++ b/talk.html
@@ -23,6 +23,8 @@
 </div>
 <ul>
 <li><p>Variance Reduction and Low Sample Complexity in Stochastic Optimization via Proximal Point Methods <br />
+SIAM-NNP Annual Meeting, Newark, NJ, October 2023 <br />
+INFORMS Annual Meeting, Phoenix, AZ, October 2023 <br />
 International Conference on Stochastic Programming, Davis, CA, July 2023 <br />
 SIAM Conference on Optimization, Seattle, WA, May-June 2023</p>
 </li>
@@ -128,7 +130,7 @@ International Conference on Ocean, Offshore and Arctic Engineering, St. Johns, N
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-10-05 11:45:03 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-10-26 13:41:14 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
