--- a/index.html
+++ b/index.html
@@ -68,6 +68,8 @@ He obtained Ph.D. in Operations Research at Georgia Tech, advised by <a href="ht
 </ul>
 <h2>News </h2>
 <ul>
+<li><p>The paper <a href="https://arxiv.org/abs/2207.09024">&ldquo;A single cut proximal bundle method for stochastic convex composite optimization&rdquo;</a> has been accepted by Mathematical Programming.</p>
+</li>
 <li><p>The paper <a href="https://proceedings.mlr.press/v195/yuan23a.html">&ldquo;On a Class of Gibbs Sampling over Networks&rdquo;</a> has been published in Conference on Learning Theory (COLT) 2023.</p>
 </li>
 <li><p>The paper <a href="https://openreview.net/forum?id=CkXOwlhf27">&ldquo;A Proximal Algorithm for Sampling&rdquo;</a> has been published in Transactions on Machine Learning Research.</p>
@@ -78,12 +80,10 @@ He obtained Ph.D. in Operations Research at Georgia Tech, advised by <a href="ht
 </li>
 <li><p>A new paper <a href="https://arxiv.org/abs/2303.14896">&ldquo;Proximal bundle methods for hybrid weakly convex composite optimization problems&rdquo;</a>.</p>
 </li>
-<li><p>A new paper <a href="https://arxiv.org/abs/2207.09024">&ldquo;A single cut proximal bundle method for stochastic convex composite optimization&rdquo;</a>.</p>
-</li>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-08-31 08:31:14 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-11-02 11:27:08 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
