--- a/publication.html
+++ b/publication.html
@@ -27,12 +27,7 @@
 <li><p>Proximal bundle methods for hybrid weakly convex composite optimization problems
 <a href="https://arxiv.org/pdf/2303.14896.pdf">[pdf]</a> <br /></p>
 <ul>
-<li><p>Jiaming Liang, Renato D.C. Monteiro and Honghao Zhang, arXiv:2303.14896, 2023</p>
-</li></ul>
-</li>
-<li><p>A single cut proximal bundle method for stochastic convex composite optimization <a href="https://arxiv.org/pdf/2207.09024.pdf">[pdf]</a> <br /></p>
-<ul>
-<li><p>Jiaming Liang, Vincent Guigues and Renato D.C. Monteiro, arXiv:2207.09024, 2022
+<li><p>Jiaming Liang, Renato D.C. Monteiro and Honghao Zhang, arXiv:2303.14896, 2023
 
 </p>
 </li></ul>
@@ -47,6 +42,13 @@
 </ul>
 <h2>Journal Papers</h2>
 <ul>
+<li><p>A single cut proximal bundle method for stochastic convex composite optimization <a href="https://arxiv.org/pdf/2207.09024.pdf">[pdf]</a> <br /></p>
+<ul>
+<li><p>Jiaming Liang, Vincent Guigues and Renato D.C. Monteiro</p>
+</li>
+<li><p><b>Mathematical Programming</b>, 2023</p>
+</li></ul>
+</li>
 <li><p>A Proximal Algorithm for Sampling <a href="https://openreview.net/pdf?id=CkXOwlhf27">[pdf]</a> <br /></p>
 <ul>
 <li><p>Jiaming Liang and Yongxin Chen</p>
@@ -65,7 +67,7 @@
 <ul>
 <li><p>Jiaming Liang and Renato D.C. Monteiro</p>
 </li>
-<li><p><b>Computational Optimization and Applications</b>, 2023</p>
+<li><p><b>Computational Optimization and Applications</b>, 86(1):275-302, 2023</p>
 </li></ul>
 </li>
 <li><p>A Proximal Bundle Variant with Optimal Iteration-Complexity for a Large Range of Prox Stepsizes <a href="https://epubs.siam.org/doi/10.1137/20M1327513">[pdf]</a> <br /></p>
@@ -156,7 +158,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-08-31 08:31:35 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-11-02 11:37:03 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
