--- a/OPTML.html
+++ b/OPTML.html
@@ -110,13 +110,13 @@
 <ul>
 <li><p>Inexact proximal point methods <a href="./teaching/OPTML/Lec9_Inexact_Proximal_Point.pdf">[notes]</a><br /></p>
 </li>
-<li><p>Augmented Lagrangian</p>
+<li><p>Augmented Lagrangian <a href="./teaching/OPTML/Lec10_Augmented_Lagrangian.pdf">[notes]</a><br /></p>
 </li>
-<li><p>Smoothing techniques</p>
+<li><p>Smoothing techniques <a href="./teaching/OPTML/Lec11_Smoothing_Technique.pdf">[notes]</a><br /></p>
 </li>
 <li><p>Optimization in relative scale</p>
 </li>
-<li><p>Randomized coordinate descent</p>
+<li><p>Randomized block coordinate descent</p>
 </li>
 </ul>
 
@@ -152,7 +152,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-10-26 13:36:52 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-11-07 12:00:21 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
