--- a/CONTALG.html
+++ b/CONTALG.html
@@ -32,6 +32,20 @@
 </li>
 </ul>
 <ul>
+<li><p>Meeting Information: 11:05 am-12:20 pm, Tuesday/Thursday, Meliora Hall 209</p>
+</li>
+</ul>
+<ul>
+<li><p>Office Hours</p>
+<ul>
+<li><p>2:00-3:00 pm, Tuesday, Wegmans Hall 2403 
+</p>
+</li>
+</ul>
+
+</li>
+</ul>
+<ul>
 <li><p>Textbooks</p>
 <ul>
 <li><p>Amir Beck. <i>First-order methods in optimization</i>. SIAM, 2017.</p>
@@ -70,7 +84,7 @@ Programming: Modeling and Theory</i>. SIAM, 2021.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-10-06 15:21:36 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-11-08 17:12:53 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
