--- a/OPTML.html
+++ b/OPTML.html
@@ -42,9 +42,9 @@
 <ul>
 <li><p>Office Hours</p>
 <ul>
-<li><p>4:00-5:oo pm, Wednesday, Wegmans Hall 2403 (Jiaming Liang)</p>
+<li><p>4:00-5:00 pm, Wednesday, Wegmans Hall 2403 (Jiaming Liang)</p>
 </li>
-<li><p>4:00-5:oo pm, Friday, Wegmans Hall 1219 (Lin Zang)</p>
+<li><p>4:00-5:00 pm, Friday, Wegmans Hall 1219 (Lin Zang)</p>
 </li>
 </ul>
 
@@ -152,7 +152,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-11-07 12:00:21 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-11-08 17:13:31 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
