--- a/teaching.html
+++ b/teaching.html
@@ -25,7 +25,7 @@
 <ul>
 <li><p><a href="https://jiaming-liang.github.io/OPTML.html">DSCC 435 / CSC 435 / ECE 412 Optimization for Machine Learning</a> (Fall 2023)</p>
 </li>
-<li><p><a href="https://jiaming-liang.github.io/CONTALG.html">Continuous Algorithms for Optimization and Sampling</a> (Spring 2024)</p>
+<li><p><a href="https://jiaming-liang.github.io/CONTALG.html">CSC 574 / DSCC 574-1 Continuous Algorithms for Optimization and Sampling</a> (Spring 2024)</p>
 </li>
 </ul>
 <h2>Recitation instructor @ Yale</h2>
@@ -48,7 +48,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-10-06 15:20:59 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-11-08 17:06:52 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
