--- a/OPTML.html
+++ b/OPTML.html
@@ -114,9 +114,10 @@
 </li>
 <li><p>Smoothing techniques <a href="./teaching/OPTML/Lec11_Smoothing_Technique.pdf">[notes]</a><br /></p>
 </li>
-<li><p>Optimization in relative scale</p>
+<li><p>Optimization in relative scale <a href="./teaching/OPTML/Lec12_Optimization_in_Relative_Scale.pdf">[notes]</a><br /></p>
 </li>
-<li><p>Randomized block coordinate descent</p>
+<li><p>Randomized block coordinate descent
+</p>
 </li>
 </ul>
 
@@ -127,11 +128,9 @@
 <ul>
 <li><p>Nonconvex optimization</p>
 </li>
-<li><p>Stochastic optimization</p>
-</li>
-<li><p>Distributed optimization</p>
-</li>
-<li><p>Manifold optimization</p>
+<li><p>Stochastic optimization
+
+</p>
 </li>
 <li><p>Reinforcement learning</p>
 </li>
@@ -152,7 +151,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-11-08 17:13:31 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-11-14 11:31:49 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
