--- a/OPTML.html
+++ b/OPTML.html
@@ -116,7 +116,7 @@
 </li>
 <li><p>Optimization in relative scale <a href="./teaching/OPTML/Lec12_Optimization_in_Relative_Scale.pdf">[notes]</a><br /></p>
 </li>
-<li><p>Randomized block coordinate descent
+<li><p>Randomized block coordinate descent <a href="./teaching/OPTML/Lec13_Randomized_Block_Coordinate_Descent.pdf">[notes]</a><br />
 </p>
 </li>
 </ul>
@@ -151,7 +151,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-11-14 11:31:49 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-11-21 13:38:16 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
