--- a/OPTML.html
+++ b/OPTML.html
@@ -126,13 +126,13 @@
 <ul>
 <li><p>Selected topics in machine learning</p>
 <ul>
-<li><p>Nonconvex optimization</p>
+<li><p>Nonconvex optimization <a href="./teaching/OPTML/Lec14_Nonconvex_Optimization.pdf">[notes]</a><br /></p>
 </li>
-<li><p>Stochastic optimization
+<li><p>Stochastic optimization <a href="./teaching/OPTML/Lec15_Stochastic_Optimization.pdf">[notes]</a><br />
 
 </p>
 </li>
-<li><p>Reinforcement learning</p>
+<li><p>Reinforcement learning <a href="./teaching/OPTML/Lec16_Reinforcement_Learning.pdf">[notes]</a><br /></p>
 </li>
 </ul>
 
@@ -141,9 +141,7 @@
 <ul>
 <li><p>Beyond first-order methods</p>
 <ul>
-<li><p>Second-order methods </p>
-</li>
-<li><p>Higher-order methods</p>
+<li><p>Second and higher-order methods</p>
 </li>
 </ul>
 
@@ -151,7 +149,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-11-21 13:38:16 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-11-29 16:32:18 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
