--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ Email: firstname DOT lastname AT rochester DOT edu <br />
 
 
 </p>
-<p><b>Prospective students:</b> I am looking for graduate students who are interested in optimization, sampling, and other topics in data science, machine learning, and operations research. Feel free to contact me about any interest we may share.</p>
+<p><b>Prospective students:</b> I am looking for graduate students and postdocs who are interested in optimization, sampling, and other topics in data science, machine learning, and operations research. Feel free to contact me about any interest we may share.</p>
 </td></tr></table>
 <h2>Short Bio </h2>
 <p>Jiaming is an assistant professor in Data Science and Computer Science at the University of Rochester. He was a postdoctoral researcher at Yale CS department, under the supervision of <a href="http://www.cs.yale.edu/homes/wibisono/">Andre Wibisono</a>.
@@ -68,7 +68,7 @@ He obtained Ph.D. in Operations Research at Georgia Tech, advised by <a href="ht
 </ul>
 <h2>News </h2>
 <ul>
-<li><p>The paper <a href="https://arxiv.org/abs/2207.09024">&ldquo;A single cut proximal bundle method for stochastic convex composite optimization&rdquo;</a> has been accepted by Mathematical Programming.</p>
+<li><p>The paper <a href="https://link.springer.com/article/10.1007/s10107-023-02035-2">&ldquo;A single cut proximal bundle method for stochastic convex composite optimization&rdquo;</a> has been published by Mathematical Programming.</p>
 </li>
 <li><p>The paper <a href="https://proceedings.mlr.press/v195/yuan23a.html">&ldquo;On a Class of Gibbs Sampling over Networks&rdquo;</a> has been published in Conference on Learning Theory (COLT) 2023.</p>
 </li>
@@ -83,7 +83,7 @@ He obtained Ph.D. in Operations Research at Georgia Tech, advised by <a href="ht
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-11-02 11:27:08 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-12-12 11:27:40 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
