--- a/publication.html
+++ b/publication.html
@@ -42,7 +42,7 @@
 </ul>
 <h2>Journal Papers</h2>
 <ul>
-<li><p>A single cut proximal bundle method for stochastic convex composite optimization <a href="https://arxiv.org/pdf/2207.09024.pdf">[pdf]</a> <br /></p>
+<li><p>A single cut proximal bundle method for stochastic convex composite optimization <a href="https://link.springer.com/epdf/10.1007/s10107-023-02035-2?sharing_token=SLlEHwce43QGyWRpmxHSgPe4RwlQNchNByi7wbcMAY7Itbjg9zeoao5XqhoCDcU3YwsUSjDkCtcKsD29vkR_G13qybbeH8etitsLydzIzlIKRG_i8r6F998CIubqSaw6Ee_RyJcAY2nzm4sYVbyavuW0YUmYPvQeCkWqx8WOmRk%3D">[pdf]</a> <br /></p>
 <ul>
 <li><p>Jiaming Liang, Vincent Guigues and Renato D.C. Monteiro</p>
 </li>
@@ -158,7 +158,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-11-02 11:37:03 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-12-12 11:25:43 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
