--- a/OPTML.html
+++ b/OPTML.html
@@ -24,6 +24,10 @@
 <p>This course primarily focuses on algorithms for large-scale optimization problems arising in machine learning and data science applications. The first part will cover first-order methods including gradient and subgradient methods, mirror descent, proximal gradient method, accelerated gradient method, Frank-Wolfe method, and inexact proximal point methods. The second part will introduce algorithms for nonconvex optimization, stochastic optimization, distributed optimization, manifold optimization, reinforcement learning, and those beyond first-order.</p>
 <h2>Course Information</h2>
 <ul>
+<li><p><a href="https://www.youtube.com/watch?v=I_6bIrbaBW0&amp;list=PLuJY91x7h5orCtyh6mChurVQ2ZZef9qPF&amp;ab_channel=JiamingLiang">YouTube videos</a></p>
+</li>
+</ul>
+<ul>
 <li><p><a href="./teaching/OPTML/syllabus.pdf">Syllabus</a></p>
 </li>
 </ul>
@@ -149,7 +153,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-11-29 16:32:18 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-12-18 11:25:19 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
