--- a/CONTALG.html
+++ b/CONTALG.html
@@ -36,16 +36,6 @@
 </li>
 </ul>
 <ul>
-<li><p>Office Hours</p>
-<ul>
-<li><p>2:00-3:00 pm, Tuesday, Wegmans Hall 2403 
-</p>
-</li>
-</ul>
-
-</li>
-</ul>
-<ul>
 <li><p>Textbooks</p>
 <ul>
 <li><p>Amir Beck. <i>First-order methods in optimization</i>. SIAM, 2017.</p>
@@ -64,6 +54,11 @@ Programming: Modeling and Theory</i>. SIAM, 2021.</p>
 <h2>Topics</h2>
 <ul>
 <li><p>Introduction</p>
+<ul>
+<li><p>Interface between optimization and sampling <a href="./teaching/OPTML/leture_1_introduction.pptx">[slides]</a><br /></p>
+</li>
+</ul>
+
 </li>
 </ul>
 <ul>
@@ -84,7 +79,7 @@ Programming: Modeling and Theory</i>. SIAM, 2021.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-11-08 17:12:53 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-01-18 10:58:59 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
