--- a/publication.html
+++ b/publication.html
@@ -112,6 +112,13 @@
 </ul>
 <h2>Conference Papers</h2>
 <ul>
+<li><p>Nesterov smoothing for sampling without smoothness <a href="https://ieeexplore.ieee.org/document/10383529">[pdf]</a> <br /></p>
+<ul>
+<li><p>Jiaojiao Fan, Bo Yuan, Jiaming Liang, and Yongxin Chen</p>
+</li>
+<li><p><b>2023 Conference on Decision and Control (CDC)</b></p>
+</li></ul>
+</li>
 <li><p>On a Class of Gibbs Sampling over Networks <a href="https://proceedings.mlr.press/v195/yuan23a/yuan23a.pdf">[pdf]</a> <br /></p>
 <ul>
 <li><p>Bo Yuan, Jiaojiao Fan, Jiaming Liang, Andre Wibisono, and Yongxin Chen</p>
@@ -158,7 +165,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-12-12 11:25:43 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-01-21 12:05:17 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
