--- a/index.html
+++ b/index.html
@@ -68,14 +68,14 @@ He obtained Ph.D. in Operations Research at Georgia Tech, advised by <a href="ht
 </ul>
 <h2>News </h2>
 <ul>
-<li><p>The paper <a href="https://link.springer.com/article/10.1007/s10107-023-02035-2">&ldquo;A single cut proximal bundle method for stochastic convex composite optimization&rdquo;</a> has been published by Mathematical Programming.</p>
+<li><p>The paper <a href="https://link.springer.com/article/10.1007/s10107-023-02035-2">&ldquo;A single cut proximal bundle method for stochastic convex composite optimization&rdquo;</a> has been published in Mathematical Programming.</p>
 </li>
 <li><p>A new paper <a href="https://arxiv.org/abs/2303.14896">&ldquo;Proximal bundle methods for hybrid weakly convex composite optimization problems&rdquo;</a>.</p>
 </li>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-01-21 12:06:45 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-01-21 12:31:41 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
