--- a/CONTALG.html
+++ b/CONTALG.html
@@ -63,6 +63,11 @@ Programming: Modeling and Theory</i>. SIAM, 2021.</p>
 </ul>
 <ul>
 <li><p>Continuous optimization</p>
+<ul>
+<li><p>Subgradient method <a href="./teaching/CONTALG/Lec2_Subgradient_Method.pdf">[notes]</a><br /></p>
+</li>
+</ul>
+
 </li>
 </ul>
 <ul>
@@ -79,7 +84,7 @@ Programming: Modeling and Theory</i>. SIAM, 2021.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-01-18 10:58:59 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-01-23 21:33:17 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
