--- a/CONTALG.html
+++ b/CONTALG.html
@@ -66,6 +66,8 @@ Programming: Modeling and Theory</i>. SIAM, 2021.</p>
 <ul>
 <li><p>Subgradient method <a href="./teaching/CONTALG/Lec2_Subgradient_Method.pdf">[notes]</a><br /></p>
 </li>
+<li><p>Mirror descent <a href="./teaching/CONTALG/Lec3_Mirror_Descent.pdf">[notes]</a><br /></p>
+</li>
 </ul>
 
 </li>
@@ -84,7 +86,7 @@ Programming: Modeling and Theory</i>. SIAM, 2021.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-01-23 21:33:17 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-01-24 16:36:18 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
