--- a/CONTALG.html
+++ b/CONTALG.html
@@ -68,6 +68,8 @@ Programming: Modeling and Theory</i>. SIAM, 2021.</p>
 </li>
 <li><p>Mirror descent <a href="./teaching/CONTALG/Lec3_Mirror_Descent.pdf">[notes]</a><br /></p>
 </li>
+<li><p>Proximal gradient method <a href="./teaching/CONTALG/Lec4_Proximal_Gradient.pdf">[notes]</a><br /></p>
+</li>
 </ul>
 
 </li>
@@ -86,7 +88,7 @@ Programming: Modeling and Theory</i>. SIAM, 2021.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-01-24 16:36:18 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-02-06 01:04:18 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
