--- a/CONTALG.html
+++ b/CONTALG.html
@@ -70,6 +70,8 @@ Programming: Modeling and Theory</i>. SIAM, 2021.</p>
 </li>
 <li><p>Proximal gradient method <a href="./teaching/CONTALG/Lec4_Proximal_Gradient.pdf">[notes]</a><br /></p>
 </li>
+<li><p>Frank-Wolfe method <a href="./teaching/CONTALG/Lec5_Frank-Wolfe_Method.pdf">[notes]</a><br /></p>
+</li>
 </ul>
 
 </li>
@@ -88,7 +90,7 @@ Programming: Modeling and Theory</i>. SIAM, 2021.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-02-06 01:04:18 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-02-15 17:32:41 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
