--- a/publication.html
+++ b/publication.html
@@ -24,8 +24,12 @@
 </div>
 <h2>Preprints</h2>
 <ul>
-<li><p>Proximal bundle methods for hybrid weakly convex composite optimization problems
-<a href="https://arxiv.org/pdf/2303.14896.pdf">[pdf]</a> <br /></p>
+<li><p>Variance Reduction and Low Sample Complexity in Stochastic Optimization via Proximal Point Method <a href="https://arxiv.org/pdf/2402.08992.pdf">[pdf]</a> <br /></p>
+<ul>
+<li><p>Jiaming Liang, arXiv:2402.08992, 2024</p>
+</li></ul>
+</li>
+<li><p>Proximal bundle methods for hybrid weakly convex composite optimization problems <a href="https://arxiv.org/pdf/2303.14896.pdf">[pdf]</a> <br /></p>
 <ul>
 <li><p>Jiaming Liang, Renato D.C. Monteiro and Honghao Zhang, arXiv:2303.14896, 2023
 
@@ -165,7 +169,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-01-21 12:05:17 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-02-15 17:32:32 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
