--- a/CONTALG.html
+++ b/CONTALG.html
@@ -78,6 +78,11 @@ Programming: Modeling and Theory</i>. SIAM, 2021.</p>
 </ul>
 <ul>
 <li><p>Stochastic optimization</p>
+<ul>
+<li><p>Stochastic approximation <a href="./teaching/CONTALG/Lec6_Stochastic_Approximation.pdf">[notes]</a><br /></p>
+</li>
+</ul>
+
 </li>
 </ul>
 <ul>
@@ -90,7 +95,7 @@ Programming: Modeling and Theory</i>. SIAM, 2021.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-02-15 17:32:41 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-02-21 01:06:33 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
